stylesheet/main.css
/* ... */
#my-row {

  /* display: flex;
  flex-direction: row; */
  /* width: 100%;
  flex-grow: 1; */
  /* background-image: url("https://new.maineartmuseums.org/wp-content/uploads/2006/11/Bowdoin-Banner.jpg"); */
  background-image: url("https://raw.githubusercontent.com/Jouya/PQ4/master/Images/homepage.jpeg");

  opacity: 120%;
  background-blend-mode: lighten;
  background-repeat: repeat-x;
  margin-top: 0vh;
  /* height: 75vh; */
  /* max-height: 120%; */
  width: 108%;
  height: 80%;

}

.footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  /* width: 75%; */
  background-color: white;
  font-family: inherit;
  position: absolute;
 
}

.footer :right{
  display: flex;
  font-size: 15px;
  margin-bottom: 5px;
}

#h1 {
    font-family: 'Roboto Condensed', serif;
    font-weight: bold;
    margin-left:10px;
}
#h4 {
    font-family: 'Roboto Condensed', serif;
    font-weight: bold;
}
.col-md-5 {
  text-align: center;
}

#right {
    position: absolute;
    right: 2%;
}
.parafo {
  margin-left: 30px;
}

.right2 {
  position: absolute;
  right: 10%;
  margin-top: 5.5%;
}

.left {
  position: absolute;
  left: 30%;
  
}
.left2 {
  position: absolute;
  left: 25%;
  margin-top: 20px;
}
.form {
    margin-left: 0%;
    font-family: 'Roboto Condensed', serif;
  }

.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: -5px;
    left: -20px;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    font-family: 'Roboto Condensed', serif;
    margin-left:0;

  }
  
  /* The sidebar links */
  .sidebar a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #D3D3D3;
    display: block;
    transition: 0.3s;
  }
  
  /* When you mouse over the navigation links, change their color */
  .sidebar a:hover {
    color: #f1f1f1;
  }
  
  /* Position and style the close button (top right corner) */
  .sidebar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }
  
  /* The button used to open the sidebar */
  .openbtn {
    font-size: 20px;
    cursor: pointer;
    background-color: white;
    color:#111;
    padding: 10px 15px;
    border: none;
  }
  
 
  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
  #main {
    transition: margin-left .5s; /* If you want a transition effect */
    padding: 20px;
  }
  
  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
  @media screen and (max-height: 450px) {
    .sidebar {padding-top: 15px;}
    .sidebar a {font-size: 18px;}
  }

 #h2 {
     position: relative;
     top: -45px;
     left: 55px;
     font-family: 'Roboto Condensed', serif;
     font-weight: bold;
    
 }

 #h3 {
  position: relative;
  margin-left:15%;
  font-family: 'Roboto Condensed', serif;
  font-weight: bold;
  font-size: 22px;
 
}

 #contact-submit {
    background-color: black;
    color: white;
    font-family: 'Roboto Condensed', serif;
    padding: 10px;
 }

 #contact-submit:hover {

   
    background-color: gray;
    font-family: 'Roboto Condensed', serif;
    padding: 10px;
 }


 .index {

    display: flex;
    resize: auto;
 }

 #contactpic {
  
    max-width: 100%;
    margin-top: -40px;
 }

 .contactpage {

  margin-left:-20px;
  margin-right:-20px;
 }
 

 #contact-btn {

  background-color:white;
 }

 #pagelink {
  color:black;
  font-weight: 900;
  font-size: 25px;
  text-align: center;
  font-family: 'Roboto Condensed', serif;
  margin:auto;

   
 }

 #pagelink:hover {
  cursor: pointer;
  color: gray;
  font-weight:900;
  text-decoration:none;
  background: transparent;

  
 }

 .container {
  position: relative;
  text-align: center;
  color: white;
}

#logo {
  position: absolute;
  margin-left: 20px;

}

.side_button {
  background-color: black;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  margin: 4px 2px;
  cursor: pointer;
  position: initial;
  width: 180px;
  height: 80px;
  margin-left:32%;
  font-family: 'Roboto Condensed', serif;
  
}

.side_button:hover {

  background-color: gray;
}

.custom_img_center {
  display: flex;
  margin-right: 30px ;
  margin-left: 30px ;
  border-radius: 25px;
}
  

.image {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
}

.container2:hover .custom_img_center{
  opacity: 0.8;
}

.container2:hover .middle2 {
  opacity: 1;
}

.middle2 {
  transition: .5s ease;
  opacity: 0;
  position: relative;
  top: 50%;
  left: 100%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%)
}

.text2 {
  background-color: black;
  color: White;
  font-size: 16px;
  padding: 16px 32px;
  text-align: center;
}

.container2 {
  position: relative;
  width: 50%;
}

.visitpage {
  margin-top: -10px;
  margin-left:-20px;
  margin-right:-20px;
 }

 #visitpic {
  max-width: 100%;
  margin-top: -40px;
}

.tour_button {
  position: absolute;
  background-color: black;
  color: white;
  text-align: center;
  font-size: 24px;
  cursor: pointer;
  width: 210px;
  height: 55px;
  margin-top: -105px;
  margin-left: 85%;
  font-family: 'Roboto Condensed', serif;
}

#h6 {
  position: absolute;
  margin-left: 2%;
  font-family: 'Roboto Condensed', serif;
}

#map {
  position: fixed;
  margin-top: 4%;
  margin-left: 2%;
  width: 50%;
  height: 400px;
  background-color: grey;
}

#h7 {
  position: absolute;
  right: 32%;
  bottom: 8.5%;
  font-family: 'Roboto Condensed', serif;
}

input[type=text] {
  width: 130px;
  -webkit-transition: width 0.4s ease-in-out;
  transition: width 0.4s ease-in-out;
}

/* When the input field gets focus, change its width to 100% */
input[type=text]:focus {
  width: 20%;
}

h2 {

  margin-right: 20px;
}
/* ... */

